--- a/src/components/intro/Intro.css
+++ b/src/components/intro/Intro.css
@@ -122,8 +122,9 @@
 }
 
 .hi {
-	font-family: "Trebuchet MS", "Lucida Sans Unicode", "Lucida Grande",
-		"Lucida Sans", Arial, sans-serif;
+	font-family:
+		"Trebuchet MS", "Lucida Sans Unicode", "Lucida Grande", "Lucida Sans",
+		Arial, sans-serif;
 	text-shadow: 2px -1.5px 1px rgb(159, 132, 204);
 	margin-top: 0.5em;
 	margin-bottom: 1.5em;
@@ -150,10 +151,10 @@
 
 .para-about {
 	margin: 1em 0 0;
-	font-family: Cambria, Cochin, Georgia, Times, "Times New Roman", serif;
+	font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
 	color: var(--aquamarine);
-	font-size: 14.5px;
-	word-spacing: 5px;
+	font-size: 13.5px;
+	word-spacing: 3px;
 	line-height: 1.8em;
 }
 
