--- a/src/components/projects/Projects.css
+++ b/src/components/projects/Projects.css
@@ -8,8 +8,9 @@
 .projects-title {
 	align-self: center;
 	margin-bottom: 0.5em;
-	font-family: "Trebuchet MS", "Lucida Sans Unicode", "Lucida Grande",
-		"Lucida Sans", Arial, sans-serif;
+	font-family:
+		"Trebuchet MS", "Lucida Sans Unicode", "Lucida Grande", "Lucida Sans",
+		Arial, sans-serif;
 }
 
 .projects-container {
@@ -23,8 +24,11 @@
 	border-radius: 5px;
 	box-shadow: -1px -1px 2px;
 	display: grid;
-	grid-template-rows: 4fr 1fr 2, 5fr 1fr;
+	grid-template-rows:
+		4fr 1fr 2,
+		5fr 1fr;
 	color: var(--antiquewhite);
+	font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
 }
 
 .projo:hover {
@@ -62,13 +66,16 @@
 .projo-name {
 	margin: 0.5em 0.5em 0.5em 2em;
 	text-transform: uppercase;
-	font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+}
+
+.projo-skills {
+	opacity: 0.6;
+	font-size: 12px;
 }
 
 .projo-des {
 	margin: 0.5em;
-	font-family: Cambria, Cochin, Georgia, Times, "Times New Roman", serif;
-	font-size: 14.5px;
+	font-size: 13.5px;
 	word-spacing: 3px;
 	line-height: 1.5em;
 	text-indent: 7px;
