--- a/src/components/work/Work.css
+++ b/src/components/work/Work.css
@@ -8,8 +8,9 @@
 .heading-work {
 	align-self: center;
 	margin: 1em 0 0.8em;
-	font-family: "Trebuchet MS", "Lucida Sans Unicode", "Lucida Grande",
-		"Lucida Sans", Arial, sans-serif;
+	font-family:
+		"Trebuchet MS", "Lucida Sans Unicode", "Lucida Grande", "Lucida Sans",
+		Arial, sans-serif;
 }
 
 .work-container {
@@ -17,6 +18,7 @@
 	border-radius: 0.5em;
 	padding: 1em;
 	margin-bottom: 3.5em;
+	font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
 }
 
 .work-container:hover {
@@ -37,7 +39,7 @@
 
 .work-title {
 	color: var(--aquamarine);
-	font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
+	/* font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif; */
 }
 
 .work-place {
@@ -54,8 +56,7 @@
 
 .description {
 	margin-top: 1.3em;
-	font-family: Cambria, Cochin, Georgia, Times, "Times New Roman", serif;
-	font-size: 14.5px;
+	font-size: 12.5px;
 	word-spacing: 4px;
 	line-height: 1.5em;
 }
