--- a/src/components/App.css
+++ b/src/components/App.css
@@ -216,6 +216,13 @@ body {
 		rgb(16, 9, 56)
 	);
 
+	--transparent-body-background: linear-gradient(
+		to left,
+		rgba(16, 9, 56, 0.8),
+		rgba(22, 67, 126, 0.8),
+		rgba(16, 9, 56, 0.8)
+	);
+
 	--animation-back-color: rgb(19, 214, 214);
 
 	--aquamarine: aquamarine;
