--- a/src/components/skills/Skills.css
+++ b/src/components/skills/Skills.css
@@ -1,4 +1,5 @@
 .tech-stack {
+	margin: 1em;
 	margin-top: 3.5em;
 	padding: 0.5em;
 	color: var(--antiquewhite);
@@ -32,23 +33,18 @@
 	font-family:
 		"Trebuchet MS", "Lucida Sans Unicode", "Lucida Grande", "Lucida Sans",
 		Arial, sans-serif;
-	font-size: 12px;
 }
 
 .skills-cont > div:hover {
-	animation: changeFont 3s 1 linear;
-}
-
-.skills-cont > div > p {
-	font-size: 16px;
+	animation: changeFont 3s infinite linear;
 }
 
 @keyframes changeFont {
 	0% {
-		font-size: 2px;
+		font-size: 0.3em;
 	}
 	100% {
-		font-size: 12px;
+		font-size: 1em;
 	}
 }
 
