--- a/src/components/skills/Skills.css
+++ b/src/components/skills/Skills.css
@@ -1,5 +1,4 @@
 .tech-stack {
-	margin: 1em;
 	margin-top: 3.5em;
 	padding: 0.5em;
 	color: var(--antiquewhite);
@@ -33,18 +32,23 @@
 	font-family:
 		"Trebuchet MS", "Lucida Sans Unicode", "Lucida Grande", "Lucida Sans",
 		Arial, sans-serif;
+	font-size: 10px;
 }
 
 .skills-cont > div:hover {
-	animation: changeFont 3s infinite linear;
+	animation: changeFont 3s 1 linear;
+}
+
+.skills-cont > div > p {
+	font-size: 13px;
 }
 
 @keyframes changeFont {
 	0% {
-		font-size: 0.3em;
+		font-size: 2px;
 	}
 	100% {
-		font-size: 1em;
+		font-size: 10px;
 	}
 }
 
